# GetChat

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
docs/: PRD-v1.md  ROADMAP-v1.1.md  SQLiteSchema+TauriCommand接口设计.md  TypeScript核心类型定义+ZustandStore设计草案.md  前后端联调矩阵+SmokeTest清单.md  前后端联调通过报告模板.md  前后端联调验收清单+TauriSQLite常见坑位清单.md  前端组件树+页面状态流转图+关键事件清单.md  编译指导手册.md
scripts/: normalize-line-endings.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  test_support.rs
src-tauri/src/commands/: bootstrap.rs  branches.rs  conversations.rs  debug.rs  messages.rs  mod.rs  settings.rs  streaming.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_sibling_unique.sql  0003_provider_models_and_branch_preferences.sql  0004_title_source.sql
src-tauri/src/dto/: branches.rs  common.rs  conversations.rs  debug.rs  messages.rs  mod.rs  settings.rs  streaming.rs
src-tauri/src/repositories/: app_kv.rs  branches.rs  conversations.rs  messages.rs  mod.rs  provider_models.rs  providers.rs
src-tauri/src/services/: helper_ai_service.rs  invariant_service.rs  message_repair_service.rs  mod.rs  model_stream_service.rs  prompt_service.rs  snapshot_service.rs
src-tauri/tests/: invariant_tests.rs
(+87 files in other folders)
